--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1284,8 +1284,8 @@
    "source": [
     "#I'll want to see some of the images, so define function to display them\n",
     "def display_image(ipath):\n",
-    "    image = Image.open(ipath)\n",
-    "    plt.imshow(image)\n",
+    "    images = Image.open(ipath)\n",
+    "    plt.imshow(images)\n",
     "    plt.show()"
    ]
   },
