--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -3286,7 +3286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split notebook here later"
+    "## Note that this notebook will be split here for readability."
    ]
   },
   {
